@@ -63,15 +63,15 @@ ${importUtils.generate()}
 public abstract class ${superClassName} extends ${baseClassName} {
 
 ## Create ivars names
+#if( $createPropertyNames )
 #foreach( $attr in ${object.DeclaredAttributes} )
-    @Deprecated
     public static final String ${stringUtils.capitalizedAsConstant($attr.Name)}_PROPERTY = "${attr.Name}";
 #end
 #foreach( $rel in ${object.DeclaredRelationships} )
-    @Deprecated
     public static final String ${stringUtils.capitalizedAsConstant($rel.Name)}_PROPERTY = "${rel.Name}";
 #end
 
+#end
 ## Create Properties
 #foreach( $attr in ${object.DeclaredAttributes} )
     public static final Property<$importUtils.formatJavaType(${attr.Type}, false)> ${stringUtils.capitalizedAsConstant($attr.Name)} = new Property<$importUtils.formatJavaType(${attr.Type}, false)>("${attr.Name}");
