@@ -53,11 +53,12 @@ ${importUtils.generate()}
 public abstract class ${superClassName} extends ${baseClassName} {
 
 ## Create property names
+#if( $createPropertyNames )
 #foreach( $attr in ${object.Attributes} )
-    @Deprecated
     public static final String ${stringUtils.capitalizedAsConstant($attr.Name)}_PROPERTY = "${attr.Name}";
 #end
 
+#end
 ## Create Properties
 #foreach( $attr in ${object.Attributes} )
     public static final Property<$importUtils.formatJavaType(${attr.Type}, false)> ${stringUtils.capitalizedAsConstant($attr.Name)} = new Property<$importUtils.formatJavaType(${attr.Type}, false)>("${attr.Name}");
