@@ -53,15 +53,15 @@ public#if("true" == "${object.getIsAbstract()}") abstract#end class ${subClassNa
     private static final long serialVersionUID = 1L; 
      
 ## Create property names
+#if( $createPropertyNames )
 #foreach( $attr in ${object.DeclaredAttributes} )
-    @Deprecated
     public static final String ${stringUtils.capitalizedAsConstant($attr.Name)}_PROPERTY = "${attr.Name}";
 #end
 #foreach( $rel in ${object.DeclaredRelationships} )
-    @Deprecated
     public static final String ${stringUtils.capitalizedAsConstant($rel.Name)}_PROPERTY = "${rel.Name}";
 #end
 
+#end
 #if( $object.DbEntity )
 #foreach( $idAttr in ${object.DbEntity.PrimaryKeys} )
     public static final String ${stringUtils.capitalizedAsConstant($idAttr.Name)}_PK_COLUMN = "${idAttr.Name}";
